[workspace]
members = [
    "lib/procs",
    "lib/core",
]

[package]
name = "distributed-algorithms-workbench"
authors = ["Yigit Colakoglu <root@yigit.run>"]
version = "0.1.0"
edition = "2021"

[lib]
name = "cs4545"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.89"
clap = { version = "4.5.51", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
env_logger = "0.11.8"
framework = { path = "lib/core" }
log = "0.4.28"
serde = "1.0.228"
serde_json = "1.0.145"
serde_yaml = "0.9.34"
typetag = "0.2.21"
futures = "0.3.31"
rand = "0.8"
chrono = "0.4"
ansi_term = "0.12.1"

[build-dependencies]
syn = { version = "2.0", features = ["full", "parsing"] }

[dev-dependencies]
tokio-test = "0.4"
