[package]
name = "framework"
version = "0.1.0"
edition = "2021"

[dependencies]
typetag = "0.2.21"
serde = "1.0.228"
serde_json = "1.0.145"
bincode = "1.3"
rkyv = { version = "0.7", features = ["validation"] }
log = "0.4.28"
tokio = { version = "1", features = ["full"] }
futures = "0.3.31"
thiserror = "1.0"
async-trait = "0.1"
procs = { path = "../procs" }